--- a/SwaggerSample.WebApi/SwaggerSample.WebApi.csproj
+++ b/SwaggerSample.WebApi/SwaggerSample.WebApi.csproj
@@ -49,10 +49,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\Abp.Web.Api.dll</HintPath>
     </Reference>
-    <Reference Include="Abp.Web.Api.Swagger, Version=0.7.8.1, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\Abp.Web.Api.Swagger.dll</HintPath>
-    </Reference>
     <Reference Include="AutoMapper, Version=4.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
@@ -111,6 +107,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SimpleApi3.cs" />
     <Compile Include="SwaggerSampleWebApiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
