--- a/SwaggerSample.Web/packages.config
+++ b/SwaggerSample.Web/packages.config
@@ -24,6 +24,7 @@
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net451" />
   <package id="json2" version="1.0.2" targetFramework="net451" />
+  <package id="knockoutjs" version="3.2.0" targetFramework="net452" />
   <package id="log4net" version="1.2.10" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
@@ -31,6 +32,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net451" />
@@ -39,6 +41,10 @@
   <package id="Moment.js" version="2.11.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net452" />
   <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net451" />
+  <package id="Swashbuckle" version="5.2.2" targetFramework="net452" />
+  <package id="Swashbuckle.Core" version="5.2.2" targetFramework="net452" />
   <package id="toastr" version="2.1.1" targetFramework="net451" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
+  <package id="WebApiTestOnHelpPage" version="1.3.4" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
